compiler/tests/fa/errors/noret_ret.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
بی‌بازگشت تابع بمیر():
    بازگشت
تمام

تابع اصلی:
    بمیر()
تمام
